<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.acer.simulacin.MainActivity">

    <EditText
        android:id="@+id/txtSemilla"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_semilla"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtConstAditiva"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_const_ad"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/txtSemilla"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtConstMultip"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txt_const_m"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSemilla" />

    <EditText
        android:id="@+id/txtModulo"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txt_modulo"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/txtConstMultip"
        app:layout_constraintTop_toBottomOf="@+id/txtConstAditiva" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="348dp"
        android:layout_height="71dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbtnMixto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/txt_rbtn_mixto" />

        <RadioButton
            android:id="@+id/rbtnMulti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_rbtn_mul" />
    </RadioGroup>

    <TextView
        android:id="@+id/Resultado"
        android:layout_width="85dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_resultado"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/lblResultado"
        android:layout_width="102dp"
        android:layout_height="18dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="24dp"
        android:textAlignment="textEnd"
        android:gravity="end"
        app:layout_constraintStart_toEndOf="@+id/Resultado"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="84dp"
        android:onClick="calcular"
        android:text="@string/btn_calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="329dp" />

</android.support.constraint.ConstraintLayout>
